@@ -1,5 +1,9 @@
 function x = stretched_exp_fun(init_cond, t, xt)
-
+% STRETCHED_EXP_FUN This is the fitting function for stretched_exponential_fit
+%
+% 3DFM function
+% specific\rheology\models
+% last modified 11/20/08 (krisford)
     % set guesses for fitting parameters
     x_zero = init_cond(1);
     tau    = init_cond(2);
